@@ -6,6 +6,11 @@ However contributors are encouraged to add their own entries for their work.
 
 Since build 216:
 ----------------
+
+* Remove some duplicated menu code from pythonwin which should avoid
+  having py2exe pulling in most of the pythonwin framework in some cases
+  (patch 3433527 from kxroberto.)
+
 * A new win32com.client.VARIANT object can be used for advanced control over
   the parameter types passed to some COM methods.  See the documentation in
   win32com/HTML/variant.html (also included in the help file)
@@ -18,7 +23,7 @@ Since build 216:
 * Pythonwin now warns, but allows you to continue, when saving a file with
   an invalid encoding line (bug 3139486)
 
-* Fix win32com.client.WithEvents on py3k (bug bug 3199843)
+* Fix win32com.client.WithEvents on py3k (bug 3199843)
 
 * When passing integers/unsigned integers to COM objects which did not fit 
   into 32bits, OverflowErrors were silently discarded and -1 was silently 
